# speechdis

./: .gitattributes  .gitignore  README.md  cargo.toml
backend/: Cargo.toml  README.md  Rocket.toml  index.html
backend/src/: admin.rs  cors.rs  error.rs  main.rs
backend/src/routes/: admin.rs  mod.rs  predict.rs
frontend/: Cargo.toml  README.md  index.html
frontend/src/: main.rs  old_main.rs
mlexp/: pyproject.toml  test_input.flac
mlexp/data/: TeslaAutopilot-Js1mKATxq0Y.flac
mlexp/data/models/asr/facebook_wav2vec2-base-960h/: model.onnx  tokenizer_config.json
mlexp/data/pretrained/: tokenizer_config.json
mlexp/mlexp/: Fine_Tune_XLSR_Wav2Vec2_on_Turkish_ASR_with_🤗_Transformers.ipynb  Fine_tuning_Wav2Vec2_for_English_ASR.ipynb  example.js  export_model.py  vocab.json
mlexp/tests/: test_mlexp.py
processing/: Cargo.toml
processing/src/: main.rs  sample1.flac
shared/: Cargo.toml
shared/.devcontainer/: Dockerfile
shared/src/: lib.rs
