[package]
name = "backend"
version = "0.1.0"
edition = "2018"

[dependencies]
rocket = "0.4.7"
rocket_contrib = { version = "0.4.7", default-features = false, features = ["json"] }

# Use for serialization
serde = "1.0"
serde_json = "1.0"

# Use to generate openAPI doc
rocket_okapi = "0.5.1"
schemars = "0.7"
okapi = { version = "0.4", features = ["derive_json_schema"] }
