[package]
name = "backend"
version = "0.1.0"
edition = "2018"

[dependencies]
uuid = { version = "0.8.2", features = ["v4"] }

# Use for async rocket
rocket = { git = "https://github.com/SergioBenitez/Rocket.git", default-features = false, version = "0.5.0-dev" } # branch = "master"
rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket.git", features = ["json", "uuid", "helmet"], version = "0.5.0-dev" } # branch = "master"
rocket-multipart-form-data = { git = "https://github.com/magiclen/rocket-multipart-form-data.git", branch = "master" }
# Use for serialization
serde = "1.0"
serde_json = "1.0"

redisai = { path = "../../redisai-rs", features = ["aio", "tokio"] }
shared = { path = "../shared" }

# Use to turn our enum into string
strum = { version = "0.20" }
strum_macros = { version = "0.20" }

# Use to generate openAPI doc
# schemars = { version = "0.8", features = ["preserve_order", "uuid"] }
# okapi = { git = "https://github.com/raffomania/okapi.git", branch = "add-rocket-contrib-uuid", features = ["derive_json_schema"] }
# rocket_okapi = { git = "https://github.com/raffomania/okapi.git", branch = "add-rocket-contrib-uuid", features = ["uuid"] }

# okapi = { version = "0.5.0-alpha-1", features = ["derive_json_schema"] }
# rocket_okapi = "0.6.0-alpha-1"

# Use for PoolConnection to redis
r2d2 = { version = "0.8.8" }
redis = { version = "0.20.0", features = ["aio", "tokio-native-tls-comp", "tokio-comp", "r2d2", "tls"] }
deadpool-redis = { version = "0.7.1", features = ["config"] }
