[package]
name = "frontend"
version = "0.1.0"
edition = "2018"

[dependencies]
wee_alloc = "0.4.5"
yew = { version = "0.17", features = ["web_sys"] }
ybc = "0.1.4"

# web-sys = "0.3.50"
# js-sys = "0.3.50"
# console_error_panic_hook = "0.1.6"
# wasm-bindgen = "0.2"

serde = { version = "1.0", features = ["derive"] }
anyhow = "1"
shared = { path = "../shared" }
