[tool.poetry]
name = "mlexp"
version = "0.1.0"
description = "Speechdis machine learning experiment folder"
authors = ["Thomaub <github.thomaub@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
