[tool.poetry]
name = "mlexp"
version = "0.1.0"
description = "Speechdis machine learning experiment folder"
authors = ["Thomaub <github.thomaub@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25"
soundfile = "^0.10"
transformers = "^4.5"
datasets = "^1.6"
torch = "^1.8.1"
torchaudio = "^0.8.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8"
ipython = "^7.20"
isort = "^5.7"
jupyter = "^1.0"
notebook = "^6.2"
pylama = "^7.7"
pytest = "^5.4"
pytest-cov = "^2.10"
pytest-mypy = "^0.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
