[package]
name = "processing"
version = "0.1.0"
authors = ["Thomaub <github.thomaub@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dasp = { version = "0.11", features = ["all"] }
rodio = "0.13"
audrey = "0.3"
dasp_signal = "0.11"
hound = "3"
