[package]
name = "shared"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]

# Use for serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Use to generate openAPI doc
# schemars = { version = "0.8", features = ["preserve_order", "uuid"] }
# okapi = { git = "https://github.com/raffomania/okapi.git", branch = "add-rocket-contrib-uuid", features = ["derive_json_schema"] }
# rocket_okapi = { git = "https://github.com/raffomania/okapi.git", branch = "add-rocket-contrib-uuid", features = ["uuid"] }

# The redisAI client
redisai = { path = "../../redisai-rs", default-features = false } #git = "https://github.com/ThomAub/redisai-rs.git", branch = "feature/aio" }# Use for connection to redisai
